--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
         <h1>Periodico</h1>
         <h2 id="uwu">Afro</h2>
         <br>
-        <img src="download-3.jpg">
+        <h2>  
+        La terrible economia de los esclavos/negros fue usada en el triangulo comersial.
+        Cuando se descubrió américa portugal pasó a ser la primera potencia de esclavos de europa por lo tanto ganó mucho dinero vendiendo esclavos.
+        Los esclavos no tenían poder o riqueza propia simplemente eran tratados y vendidos como animales, esas personas que los vendían ganaban dinero de forma exponencial casi todos tenían esclavos en esas épocas.
+        </h2>
+        <span>
+        <img src="1">
+        <img src="2">
+        <img src="3">
+        <img src="4">
+        </span>
         <br>
         <h2>Economia</h2>
         <p></p>
