--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         Los esclavos no tenían poder o riqueza propia simplemente eran tratados y vendidos como animales, esas personas que los vendían ganaban dinero de forma exponencial casi todos tenían esclavos en esas épocas.
         </h2>
         <span>
-        <img src="1">
-        <img src="2">
-        <img src="3">
-        <img src="4">
+        <img src="1.jpg">
+        <img src="2.jpg">
+        <img src="3.jpg">
+        <img src="4.jpg">
         </span>
         <br>
         <h2>Economia</h2>
