--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         </span>
         <br>
         <h2>Economia</h2>
-        <p></p>
+        <div>
+            <h3> La terrible economia de los esclavos/negros fue usada en el triangulo comersial.
+                Cuando se descubrió américa portugal pasó a ser la primera potencia de esclavos de europa por lo tanto ganó mucho dinero vendiendo esclavos.
+                Los esclavos no tenían poder o riqueza propia simplemente eran tratados y vendidos como animales, esas personas que los vendían ganaban dinero de forma exponencial casi todos tenían esclavos en esas épocas</h3>
+        </div>
         <h3>Una de nuestras fuentes fue esta:</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/TcpWrjGaTZI"
          title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
